--- a/FutureXcel.Api/wwwroot/index.html
+++ b/FutureXcel.Api/wwwroot/index.html
@@ -3,47 +3,110 @@
 <head>
     <meta charset="utf-8">
     <title>Built by Muhammad Fayaz</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 40px;
-            background-color: #f4f4f4;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            background: linear-gradient(135deg, #74ebd5 0%, #ACB6E5 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        .card {
+            background: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+            animation: fadeIn 1s ease-in-out;
         }
 
         h1 {
-            color: #333;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+
+        p {
+            color: #555;
+            margin: 10px 0;
         }
 
         #healthStatus {
+            margin-top: 15px;
+            padding: 12px;
+            background: #f9f9f9;
+            border: 2px solid #74ebd5;
+            border-radius: 8px;
+            font-weight: 600;
+            color: #2c3e50;
+            transition: all 0.3s ease;
+        }
+
+        footer {
             margin-top: 20px;
-            padding: 10px;
-            background: #fff;
-            border: 1px solid #ccc;
-            display: inline-block;
+            font-size: 14px;
+            color: #fff;
+            font-weight: 600;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Frontend placeholder</h1>
-    <p>Backend Health Check:</p>
-    <div id="healthStatus">Checking...</div>
+    <div class="card">
+        <h1>FutureXcel Project</h1>
+        <p>Backend Health Check:</p>
+        <div id="healthStatus">Checking...</div>
+    </div>
+
+    <footer>Built by Muhammad Fayaz</footer>
 
     <script>
         async function checkHealth() {
             try {
-                // Adjust port if your backend runs on a different one
                 const response = await fetch("/api/health");
                 if (!response.ok) {
                     throw new Error("Network response was not ok");
                 }
                 const data = await response.json();
-                document.getElementById("healthStatus").innerText = data.status;
+                const statusDiv = document.getElementById("healthStatus");
+                statusDiv.innerText = data.status;
+
+                // Add color feedback
+                if (data.status.toLowerCase() === "healthy") {
+                    statusDiv.style.background = "#d4edda";
+                    statusDiv.style.borderColor = "#28a745";
+                    statusDiv.style.color = "#155724";
+                } else {
+                    statusDiv.style.background = "#f8d7da";
+                    statusDiv.style.borderColor = "#dc3545";
+                    statusDiv.style.color = "#721c24";
+                }
             } catch (error) {
-                document.getElementById("healthStatus").innerText = "Error: " + error.message;
+                const statusDiv = document.getElementById("healthStatus");
+                statusDiv.innerText = "Error: " + error.message;
+                statusDiv.style.background = "#f8d7da";
+                statusDiv.style.borderColor = "#dc3545";
+                statusDiv.style.color = "#721c24";
             }
         }
 
-        // Call the function when page loads
         checkHealth();
     </script>
 </body>
